--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,8 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-blog-minilla-*.json
-suzuito-godzilla-*.json
-suzuito-minilla-*.json
+application_default_credentials.json
 main
+tmp
 
 .output/*.html
